# microlab-speakers-remote-hijack

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
